fix: removed component, added styles to all scrollbars

--- a/src/styles/main.global.css
+++ b/src/styles/main.global.css
@@ -41,6 +41,18 @@
   input[type='number'] {
     -moz-appearance: textfield;
   }
+
+  ::-webkit-scrollbar {
+    @apply w-[.4375rem];
+  }
+
+  ::-webkit-scrollbar-track {
+    @apply w-[.3125rem] bg-transparent;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    @apply rounded-md bg-gray-100 transition-all md:hover:bg-gray-300;
+  }
 }
 
 @layer utilities {
@@ -116,18 +128,6 @@
 
   .divider {
     @apply w-full h-px bg-gray-200 block;
-  }
-
-  .customScrollbar::-webkit-scrollbar {
-    @apply w-[.4375rem];
-  }
-
-  .customScrollbar::-webkit-scrollbar-track {
-    @apply w-[.3125rem] bg-transparent;
-  }
-
-  .customScrollbar::-webkit-scrollbar-thumb {
-    @apply rounded-md bg-gray-100 transition-all md:hover:bg-gray-300;
   }
 }
 
